JFritz 0.7.2.10:
- Unterstützung der DECT-Telefone der 7270.
- Statistik-Knopf deaktiviert, weil Internet-Monitor funktioniert.
- Lint der ganzen Files. Viele Warnings und Errors entfernt, dennoch noch eine Menge Warnings und einige Errors da.