@@ -59,7 +59,7 @@ public class ImportOutlookContactsDialog extends JDialog implements ActionListen
         Dispatch myNamespace = Dispatch.call(olo, "GetNamespace", "MAPI") //$NON-NLS-1$,  //$NON-NLS-2$
                 .toDispatch();
         Dispatch myFolder = Dispatch.call(myNamespace, "GetDefaultFolder", //$NON-NLS-1$
-                new Integer(10)).toDispatch();
+                Integer.valueOf(10)).toDispatch();
         return myFolder;
     }
 
@@ -99,7 +99,7 @@ public class ImportOutlookContactsDialog extends JDialog implements ActionListen
 		for (int i = 1; i <= count; i++) {
 			Debug.msg("Importing contact "+i);
             boolean hasTel = false;
-            Dispatch item = Dispatch.call(items, "Item", new Integer(i)) //$NON-NLS-1$
+            Dispatch item = Dispatch.call(items, "Item", Integer.valueOf(i)) //$NON-NLS-1$
                     .toDispatch();
             Person newContact = new Person();
             for (oElements = outlookElements.elements(); oElements
